--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -417,6 +417,33 @@ tbody tr:hover {
     position: relative;
     z-index: 1;
 }
+.form-check label{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.button-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.button-form {
+    display: inline-block;
+}
+
+.circle-button {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    margin: 10px;
+    padding: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    font-size: 14px;
+}
 
 
 
