--- a/src/main/resources/templates/subtaskA.html
+++ b/src/main/resources/templates/subtaskA.html
@@ -6,212 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <title>My Capstone</title>
-    <link href="/public/main.css" rel="stylesheet">
-    <style>
-        @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap');
+    <link th:href="@{/style.css}" rel="stylesheet">
 
-        body{
-
-            display: flex;
-            flex-direction: column;
-            height: 100vh;
-
-        }
-        .mid-container{
-            background-color: #FAFAFA;
-            width: 80;
-            height: fit-content;
-            margin-top: 30px;
-            border-radius: 10px ;
-            margin-left: 20px;
-            margin-right: 20px;
-            padding-bottom: 40px;
-            margin-bottom: 20px;
-        }
-        .second-container{
-            background-color: #FAFAFA;
-            width: 80;
-            height: fit-content;
-            margin-top: 30px;
-            border-radius: 10px ;
-            margin-left: 20px;
-            margin-right: 20px;
-            padding-bottom: 40px;
-            margin-bottom: 20px;
-            height: 60%;
-        }
-
-        .filter{
-            display: flex;
-            gap:60px;
-            flex-grow: 1;
-            flex-shrink: 1;
-            justify-content: center;
-            align-items: center;
-        }
-        .filter div{
-            width: 100%;
-            text-align: center;
-        }
-        .selected{
-            width: 70%;
-        }
-
-        .one p{
-            display: inline-block;
-
-        }
-        .head-table{
-            font-weight: bold;
-            font-size: large;
-
-        }
-        .me-1{
-            float: left;
-        }
-        h4{
-
-
-            font-weight: bold;
-
-        }
-        .container{
-            position: relative;
-            max-width: 320px;
-            width: 100%;
-            margin: 80px auto 30px;
-        }
-        .select-btn{
-            display: flex;
-            height: 50px;
-            align-items: center;
-            justify-content: space-between;
-            padding: 0 16px;
-            border-radius: 8px;
-            cursor: pointer;
-            background-color: #fff;
-            box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
-        }
-        .select-btn .btn-text{
-            font-size: 17px;
-            font-weight: 400;
-            color: #333;
-        }
-        .select-btn .arrow-dwn{
-            display: flex;
-            height: 21px;
-            width: 21px;
-            color: #fff;
-            font-size: 14px;
-            border-radius: 50%;
-            background: #6e93f7;
-            align-items: center;
-            justify-content: center;
-            transition: 0.3s;
-        }
-        .select-btn.open .arrow-dwn{
-            transform: rotate(-180deg);
-        }
-        .list-items{
-            position: relative;
-            margin-top: 15px;
-            border-radius: 8px;
-            padding: 16px;
-            background-color: #fff;
-            box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
-            display: none;
-        }
-        .select-btn.open ~ .list-items{
-            display: block;
-        }
-        .list-items .item{
-            display: flex;
-            align-items: center;
-            list-style: none;
-            height: 50px;
-            cursor: pointer;
-            transition: 0.3s;
-            padding: 0 15px;
-            border-radius: 8px;
-        }
-        .list-items .item:hover{
-            background-color: #e7edfe;
-        }
-        .item .item-text{
-            font-size: 16px;
-            font-weight: 400;
-            color: #333;
-        }
-        .item .checkbox{
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            height: 16px;
-            width: 16px;
-            border-radius: 4px;
-            margin-right: 12px;
-            border: 1.5px solid #c0c0c0;
-            transition: all 0.3s ease-in-out;
-        }
-        .item.checked .checkbox{
-            background-color: #4070f4;
-            border-color: #4070f4;
-        }
-        .checkbox .check-icon{
-            color: #fff;
-            font-size: 11px;
-            transform: scale(0);
-            transition: all 0.2s ease-in-out;
-        }
-        .item.checked .check-icon{
-            transform: scale(1);
-        }
-        .options::-webkit-scrollbar{
-            width: 7px;
-        }
-        .options::-webkit-scrollbar-track{
-            background: #f1f1f1;
-            border-radius: 25px;
-        }
-        .options::-webkit-scrollbar-thumb{
-            background: #ccc;
-            border-radius: 25px;
-        }
-        .options::-webkit-scrollbar-thumb:hover{
-            background: #b3b3b3;
-        }
-        .options li{
-            height: 50px;
-            padding: 0 13px;
-            font-size: 21px;
-            list-style: none;
-        }
-        .options li:hover, li.selected{
-            border-radius: 5px;
-            background: #f2f2f2;
-        }
-        .box-scroll{
-            width:300px;
-            height:400px;
-
-            overflow-y: scroll;
-            scrollbar-width: normal;
-        }
-        .box-scroll::-webkit-scrollbar{
-            width: 10px;
-        }
-        .box-scroll::-webkit-scrollbar-thumb{
-            background-color: gray;
-        }
-        .box-scroll::-webkit-scrollbar-track{
-            background-color: white;
-        }
-    </style>
 </head>
 <body>
 <!-- headers-->
-<div class="headerbox" th:fragment="header">
+<div class="header">
     <nav class="navbar navbar-expand-lg navbar-dark text-bg-secondary" aria-label="Offcanvas navbar large">
+        <img th:src="@{/sun.png}" alt="Bee Icon">
         <div class="container-fluid">
             <a class="navbar-brand" href="/">
                 <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor" class="bi bi-cloud-fill" viewBox="0 0 16 16">
@@ -239,8 +41,8 @@
                                 High-level Data
                             </a>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="#">Subtask A</a></li>
-                                <li><a class="dropdown-item" href="#">Subtask B</a></li>
+                                <li><a class="dropdown-item" href="/subtaskA/global">SubtaskA-Global</a></li>
+                                <li><a class="dropdown-item" href="/subtaskA/countries">SubtaskB-Country</a></li>
                             </ul>
                         </li>
                         <li class="nav-item dropdown">
@@ -248,8 +50,9 @@
                                 Deep Data
                             </a>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="#">Subtask A</a></li>
-                                <li><a class="dropdown-item" href="#">Subtask B</a></li>
+                                <li><a class="dropdown-item" href="/level3SubtaskA">SingleRegion</a></li>
+                                <li><a class="dropdown-item" href="/level3SubtaskA/multiple">MultipleRegion</a></li>
+                                <li><a class="dropdown-item" href="/level3SubtaskB">SubtaskB</a></li>
                             </ul>
                         </li>
                     </ul>
@@ -287,82 +90,15 @@
 
         </div>
         <div class="three">
-            <h4>Start Date</h4>
-            <select class="selected">
-                <option selected>Start</option>
-                <option></option>
-                <option></option>
-                <option></option>
-            </select>
+
         </div>
         <div class="four">
-            <h4>End date</h4>
-            <select class="selected">
-                <option selected>End</option>
-                <option></option>
-                <option></option>
-                <option></option>
-            </select>
-        </div>
+
     </div>
 </div>
 
 <div class="second-container">
-    <table class="table">
-        <thead class="head-table">
-        <tr>
-            <th>Name</th>
-            <th>
-                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                    Average Temperature
-                </a>
-                <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="#">Ascending</a></li>
-                    <li><a class="dropdown-item" href="#">Descending</a></li>
-                </ul>
-                </li></th>
-            <th>
-                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                    Min Temperature
-                </a>
-                <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="#">Ascending</a></li>
-                    <li><a class="dropdown-item" href="#">Descending</a></li>
-                </ul>
-                </li></th>
-            <th>
-                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                    Max Temperature
-                </a>
-                <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="#">Ascending</a></li>
-                    <li><a class="dropdown-item" href="#">Descending</a></li>
-                </ul>
-                </li></th>
-            <th>
-                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                    Population
-                </a>
-                <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="#">Ascending</a></li>
-                    <li><a class="dropdown-item" href="#">Descending</a></li>
-                </ul>
-                </li></th>
-            <th>
-                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                    Correlation
-                </a>
-                <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="#">Ascending</a></li>
-                    <li><a class="dropdown-item" href="#">Descending</a></li>
-                </ul>
-                </li></th>
-        </tr>
-        </thead>
-        <tbody>
 
-        </tbody>
-    </table>
 
 </div>
 
@@ -374,7 +110,7 @@
 <!--footer-->
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-<script src="/public/script.js">
+<script th:src="@{/script.js}">
 
     const selectBtn = document.querySelector(".select-btn"),
         items = document.querySelectorAll(".item");
