--- a/src/main/resources/templates/globaltest.html
+++ b/src/main/resources/templates/globaltest.html
@@ -149,7 +149,11 @@
 </div>
 
 
-
+<footer class="footer">
+    <div class="container text-center">
+        <p>&copy; 2024 Climate Analysis Platform. All rights reserved.</p>
+    </div>
+</footer>
 
 
 <!--footer-->
