--- a/src/main/resources/templates/level3SubtaskAmultiple.html
+++ b/src/main/resources/templates/level3SubtaskAmultiple.html
@@ -249,7 +249,11 @@
 </main>
 </div>
 
-
+<footer class="footer">
+    <div class="container text-center">
+        <p>&copy; 2024 Climate Analysis Platform. All rights reserved.</p>
+    </div>
+</footer>
 
 
 
