--- a/src/main/resources/templates/countries-list.html
+++ b/src/main/resources/templates/countries-list.html
@@ -224,7 +224,11 @@
 
 
 <!--footer-->
-
+<footer class="footer">
+    <div class="container text-center">
+        <p>&copy; 2024 Climate Analysis Platform. All rights reserved.</p>
+    </div>
+</footer>
 
 
 
